# bootstrap-mac

./: .gitignore  README.md  ansible.cfg  galaxy.yml  intune_o365.sh  inventory.yml  keychain.sh  local.yml  pyproject.toml  remote.yml  requirements.txt  requirements.yml  run.sh
bootstrap/roles/bootstrap-mac/tasks/: macos_firewall_screen_sharing.yml
bootstrap/roles/bootstrap_mac/defaults/: main.yml
bootstrap/roles/bootstrap_mac/handlers/: main.yml
bootstrap/roles/bootstrap_mac/tasks/: add_certs_to_keychain.yml  common_directories.yml  git_config.yml  git_repos.yml  macos_firewall_screen_sharing.yml  main.yml  ollama.yml  packages.yml  parallels_check.yml  pj_environment.yml  pj_environment_user_preferences.yml  powershell.yml  prom_metrics.yml  set_facts.yml  smb_mounts.yml  ssh.yml
bootstrap/roles/bootstrap_mac/templates/: .npmrc  .zprofile  com.purplejay.ollama.plist.j2  common_zprofile_aliases  control_node.zprofile  control_node.zprofile.j2  control_node_ssh_config  corporate.zprofile  corporate_ssh_config  employee.zprofile  employee.zprofile.j2  employee.zshrc.j2  employee_ssh_config  git.zprofile  legacy.zprofile  legacy.zprofile.j2  pip.conf  (+5 more)
roles/bootstrap-mac/defaults/: main.yml
roles/bootstrap-mac/handlers/: main.yml
roles/bootstrap-mac/tasks/: macos_firewall_screen_sharing.yml  macos_power_settings.yml  main.yml  packages.yml  parallels_check.yml  pj_environment.yml  set_facts.yml  smb_mounts.yml  ssh.yml  yubikey.yml
roles/bootstrap-mac/templates/: pip.conf
roles/bootstrap-mac/vars/: main.yml
tools/: defaults_plist2json.py  pmset_check.py
(+4 files in other folders)
