[tool.poetry]
name = "bootstrap_mac"
version = "0.1.0"
description = ""
authors = ["Brian Carlin <brian@purplejay.io>"]

[tool.poetry.dependencies]
python = "^3.9"
ansible = "^5.9.0"
ansible-lint = "^6.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
